--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,9 +11,7 @@
     </div>
 
     <div class="col">
-        <h2>Por capital</h2>
-        <hr>
-        <app-por-capital></app-por-capital>
+        <router-outlet></router-outlet>
     </div>
 
 </div>
