Actualización de los errores
Ahora sale un error si no se encuentra un resultado de la búsqueda
Se cambió además el link de la api a "https://restcountries.com/v3.1"

--- a/src/app/pais/pages/por-pais/por-pais.component.html
+++ b/src/app/pais/pages/por-pais/por-pais.component.html
@@ -10,7 +10,7 @@
 </div>
 
 <hr>
-<div class="alert alert-danger">
+<div *ngIf="!hayError" class="alert alert-danger">
     No se encontró ningun resultado.
 </div>
 
