--- a/src/app/pais/pages/por-pais/por-pais.component.html
+++ b/src/app/pais/pages/por-pais/por-pais.component.html
@@ -14,7 +14,7 @@
     No se encontró ningun resultado.
 </div>
 
-<div class="row">
+<div *ngIf="paises.length > 0" class="row">
     <div class="col">
         <table class="table table-hover">
             <thead>
@@ -27,13 +27,16 @@
                 </tr>
             </thead>
             <tbody>
-                <tr>
-                    <td>1</td>
-                    <td>Bandera</td>
-                    <td>Nombre</td>
-                    <td>1213123</td>
+                <tr *ngFor="let pais of paises; let i = index">
+                    <td>{{i + 1}}
+                    </td>
                     <td>
-                        <a href="/pais/cri">Ver...</a>
+                        <img [src]="pais.flags.svg" class="small-flag">
+                    </td>
+                    <td>{{pais.name.common}}</td>
+                    <td>{{pais.population | number}}</td>
+                    <td>
+                        <a [routerLink]="['/pais', pais.cca2]">Ver mas</a>
                     </td>
                 </tr>
             </tbody>
