--- a/src/app/pais/pages/por-pais/por-pais.component.html
+++ b/src/app/pais/pages/por-pais/por-pais.component.html
@@ -3,43 +3,16 @@
 
 <div class="row">
     <div class="col">
-        <form (ngSubmit)="buscar()" autocomplete="off">
-            <input type="text" name="termino" class="form-control" [(ngModel)]="termino" placeholder="Buscar país">
-        </form>
+        <app-pais-input (onEnter)="buscar( $event )"></app-pais-input>
     </div>
-</div>
 
-<hr>
-<div *ngIf="!hayError" class="alert alert-danger">
-    No se encontró ningun resultado.
-</div>
-
-<div *ngIf="paises.length > 0" class="row">
-    <div class="col">
-        <table class="table table-hover">
-            <thead>
-                <tr>
-                    <th>#</th>
-                    <th>Bandera</th>
-                    <th>Nombre</th>
-                    <th>Población</th>
-                    <th></th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr *ngFor="let pais of paises; let i = index">
-                    <td>{{i + 1}}
-                    </td>
-                    <td>
-                        <img [src]="pais.flags.svg" class="small-flag">
-                    </td>
-                    <td>{{pais.name.common}}</td>
-                    <td>{{pais.population | number}}</td>
-                    <td>
-                        <a [routerLink]="['/pais', pais.cca2]">Ver mas</a>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
+    <hr>
+    <div *ngIf="!hayError" class="alert alert-danger">
+        No se encontró ningun resultado.
     </div>
-</div>
+
+    <div *ngIf="paises.length > 0" class="row">
+        <div class="col">
+            <app-pais-tabla [paises]="paises"></app-pais-tabla>
+        </div>
+    </div>
