--- a/src/app/pais/pages/por-pais/por-pais.component.html
+++ b/src/app/pais/pages/por-pais/por-pais.component.html
@@ -3,7 +3,7 @@
 
 <div class="row">
     <div class="col">
-        <app-pais-input (onEnter)="buscar( $event )"></app-pais-input>
+        <app-pais-input (onEnter)="buscar( $event )" (OnDebounce)="sugerencias($event)"></app-pais-input>
     </div>
 
     <hr>
