--- a/src/app/pais/components/pais-input/pais-input.component.html
+++ b/src/app/pais/components/pais-input/pais-input.component.html
@@ -1,3 +1,4 @@
 <form (ngSubmit)="buscar()" autocomplete="off">
-    <input type="text" name="termino" class="form-control" [(ngModel)]="termino" placeholder="Buscar país">
+    <input type="text" name="termino" class="form-control" [(ngModel)]="termino" [placeholder]="placeholder">
+
 </form>
