--- a/src/app/pais/pages/ver-pais/ver-pais.component.html
+++ b/src/app/pais/pages/ver-pais/ver-pais.component.html
@@ -1,1 +1,47 @@
-<p>ver-pais works!</p>
+<div *ngIf="!pais; else divPais" class="alert alert-info">
+    Espere un momento...
+</div>
+
+<ng-template #divPais>
+    <div class="row">
+        <div class="col-12">
+            <h1>País: <small>{{pais[0].name.common}}</small></h1>
+        </div>
+    </div>
+    <div class="row">
+
+        <div class="col-4">
+            <h3>Bandera</h3>
+            <img [src]="pais[0].flags.svg" class="img-thumbnail">
+        </div>
+
+        <div class="col">
+            <h3>Información</h3>
+            <ul class="list-group">
+                <li class="list-group-item">
+                    <strong>Población</strong> {{pais[0].population | number}}
+                </li>
+                <li class="list-group-item">
+                    <strong>Código numérico</strong> {{pais[0].ccn3}}
+                </li>
+            </ul>
+        </div>
+    </div>
+
+    <h3>Traducciones</h3>
+    <div class="row">
+        <div class="col">
+            <span class="badge bg-danger mr-1">{{ pais[0].translations.ara.common}}</span>
+            <span class="badge bg-danger mr-1">{{ pais[0].translations.deu.common}}</span>
+            <span class="badge bg-danger mr-1">{{ pais[0].translations.cym.common}}</span>
+            <span class="badge bg-danger mr-1">{{ pais[0].translations.est.common}}</span>
+            <span class="badge bg-danger mr-1">{{ pais[0].translations.fra.common}}</span>
+            <span class="badge bg-danger mr-1">{{ pais[0].translations.jpn.common}}</span>
+        </div>
+    </div>
+
+    <pre class="mt-5">
+        {{pais[0] | json}}
+    </pre>
+
+</ng-template>
